DOC：v2.5 务实版架构方案 — 可落地可运行
从 v3.0 前沿蓝图中筛选低成本高价值项：
- Virtual Threads（1行配置）+ Flyway 数据库迁移
- Knife4j Swagger 在线文档+调试
- ErrorCode 枚举 + 包结构优化 + CORS
- Vue 3 + Vite + Element Plus + Pinia + Axios（非 Nuxt SSR）
- Docker Compose 一键部署 + Nginx 反向代理
- 14步实施计划（约4小时）+ 完整启动步骤

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>